--- a/verify.html
+++ b/verify.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <title>Success!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Favicon -->
     <link rel="icon" type="image/webp" href="https://cdn.discordapp.com/icons/1095234300699484171/e50ed6f979973c44a6d0e07b4adf5939.webp?size=1024">
-    <!-- Google Fonts: Fredoka -->
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -47,7 +45,7 @@
     <script>
         window.onload = function() {
             setTimeout(function() {
-                window.location.href = "discord://";
+                window.location.href = "discord://-/channels/1095234300699484171/1137888308689641595";
             }, 5000);
         };
     </script>
