--- a/gleebus.html
+++ b/gleebus.html
@@ -1,4 +1,7 @@
 <DOCTYPE HTML>
+  <head>
+    <meta http-equiv="refresh" content="0; url=https://youtu.be/dQw4w9WgXcQ">
+  </head>
   <body>
-    <p>if you see this you have added the FourFive bot in some way you shouldn't have.</p>
+    <p>FourFive is a private bot, this page is used for the verification process of the bot</p>
   </body>
